--- a/app/app/src/main/res/layout/activity_change_area.xml
+++ b/app/app/src/main/res/layout/activity_change_area.xml
@@ -71,6 +71,7 @@
             android:layout_weight="0"
             android:background="@drawable/roundedittext"
             android:fontFamily="@font/nanum"
+            android:onClick="mOnClick"
             android:text="완료" />
 
     </LinearLayout>
