--- a/app/app/src/main/res/layout/fragment_search.xml
+++ b/app/app/src/main/res/layout/fragment_search.xml
@@ -18,6 +18,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:iconifiedByDefault="false"
+            android:imeOptions="actionDone"
             android:queryHint="가맹점 이름을 입력해주세요.">
 
         </SearchView>
