--- a/app/src/main/res/layout/activity_addr_search.xml
+++ b/app/src/main/res/layout/activity_addr_search.xml
@@ -31,7 +31,7 @@
             android:layout_height="match_parent"
             android:textSize="25dp"
             android:fontFamily="@font/nanum"
-            android:text="test" />
+            android:text="지역 변경" />
 
     </androidx.appcompat.widget.Toolbar>
 
@@ -97,7 +97,7 @@
         android:layout_marginLeft="2.5dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="2.5dp"
-        android:background="#4682B4" />
+        android:background="#555" />
 
 
     <Button
@@ -118,7 +118,7 @@
         android:layout_height="0.3dp"
         android:layout_marginLeft="2.5dp"
         android:layout_marginRight="2.5dp"
-        android:background="#4682B4" />
+        android:background="#555" />
 
 </LinearLayout>
 
