--- a/app/src/main/res/layout/activity_change_area.xml
+++ b/app/src/main/res/layout/activity_change_area.xml
@@ -71,7 +71,6 @@
             android:layout_weight="0"
             android:background="@drawable/roundedittext"
             android:fontFamily="@font/nanum"
-            android:onClick="mOnClick"
             android:text="완료" />
 
     </LinearLayout>
@@ -79,7 +78,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.3dp"
-        android:background="#4682B4"
+        android:background="#555"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="2.5dp"
         android:layout_marginRight="2.5dp"/>
@@ -101,7 +100,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.3dp"
-        android:background="#4682B4"
+        android:background="#555"
         android:layout_marginLeft="2.5dp"
         android:layout_marginRight="2.5dp"/>
 
