--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,37 +18,21 @@
         android:background="@color/back_color"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/toolbarTheme"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">>
-
-        <!--
-        <ImageButton
-            android:id="@+id/add_btn"
-            android:layout_width="50dp"
-            android:layout_height="40dp"
-            android:background="@color/transparent"
-            android:layout_gravity = "right"
-            app:srcCompat="@drawable/ic_add_black_24dp"
-            tools:ignore="VectorDrawableCompat" />-->
-
-    </androidx.appcompat.widget.Toolbar>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
         <Button
             android:id="@+id/findAdr_btn"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:layout_weight="1"
             android:background="@color/transparent"
-            android:gravity="center"
-            android:text=""
             android:fontFamily="@font/nanum"
-            android:textSize="15dp" />
+            android:layout_gravity="center"
+            android:textColor="#000000"
+            android:textSize="20dp" />
 
-    </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
 
     <FrameLayout
         android:id="@+id/container"
@@ -73,7 +57,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="0.3dp"
-            android:background="#4682B4"
+            android:background="#555"
             android:layout_marginLeft="2.5dp"
             android:layout_marginRight="2.5dp"/>
 
@@ -103,7 +87,7 @@
         <View
             android:layout_width="0.3dp"
             android:layout_height="80dp"
-            android:background="#4682B4"
+            android:background="#555"
             android:layout_marginLeft="2.5dp"
             android:layout_marginRight="2.5dp"/>
 
@@ -121,7 +105,7 @@
         <View
             android:layout_width="0.3dp"
             android:layout_height="80dp"
-            android:background="#4682B4"
+            android:background="#555"
             android:layout_marginLeft="2.5dp"
             android:layout_marginRight="2.5dp"/>
 
@@ -139,7 +123,7 @@
         <View
             android:layout_width="0.3dp"
             android:layout_height="80dp"
-            android:background="#4682B4"
+            android:background="#555"
             android:layout_marginLeft="2.5dp"
             android:layout_marginRight="2.5dp"/>
 
