--- a/app/src/main/res/layout/activity_storeview.xml
+++ b/app/src/main/res/layout/activity_storeview.xml
@@ -50,6 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:fontFamily="@font/nanum"
         android:gravity="center"
         android:text="지역을 선택해주세요."
