--- a/app/src/main/res/layout/activity_addr_search.xml
+++ b/app/src/main/res/layout/activity_addr_search.xml
@@ -14,13 +14,15 @@
         android:layout_alignParentTop="true"
         android:background="@color/back_color"
         android:minHeight="?attr/actionBarSize"
+        android:gravity="center_vertical"
         android:theme="@style/toolbarTheme">
 
         <ImageButton
             android:id="@+id/back_btn"
             app:srcCompat="@drawable/ic_arrow_back_black_24dp"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="2dp"
             android:layout_gravity="left"
             android:background="@color/transparent"
             tools:ignore="VectorDrawableCompat" />
@@ -31,6 +33,8 @@
             android:layout_height="match_parent"
             android:textSize="25dp"
             android:fontFamily="@font/nanum"
+            android:paddingLeft="10dp"
+            android:textColor="#000000"
             android:text="지역 변경" />
 
     </androidx.appcompat.widget.Toolbar>
@@ -48,11 +52,22 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
         android:fontFamily="@font/nanum"
         android:gravity="center"
-        android:text="선택한 지역의 가맹점을 보여줍니다.."
+        android:text="선택한 지역의 가맹점을 보여줍니다."
         android:textSize="20dp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:fontFamily="@font/nanum"
+        android:layout_marginTop="3dp"
+        android:gravity="center"
+        android:textColor="#F78181"
+        android:text="※선택한 지역의 가맹점이 많을시, 시간이 소요될 수 있습니다."
+        android:textSize="12dp" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
