--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -36,10 +36,13 @@
             android:paddingLeft="24dp"
             android:paddingTop="24dp"
             android:paddingRight="24dp">
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:gravity="center_vertical">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -48,7 +51,8 @@
                     android:text="주소"
                     android:textStyle="bold"
                     android:textColor="#000"
-                    android:textSize="15sp"/>
+                    android:textSize="15dp"/>
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -57,12 +61,16 @@
                     android:text=""
                     android:textStyle="bold"
                     android:textColor="#000"
-                    android:textSize="15sp"/>
+                    android:textSize="15dp"/>
+
+
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/store_roadAddr"
                     android:layout_width="match_parent"
@@ -103,6 +111,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:gravity="center_vertical"
             android:paddingLeft="24dp"
             android:paddingTop="24dp"
             android:paddingRight="24dp">
@@ -112,28 +121,30 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_marginBottom="3dp"
-                android:gravity="center"
+                android:gravity="center_vertical"
                 android:text="전화"
                 android:textStyle="bold"
                 android:textColor="#000"
-                android:textSize="15sp"/>
+                android:textSize="15dp"/>
 
             <TextView
                 android:id="@+id/store_tel"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="3dp"
-                android:gravity="left"
+                android:gravity="center_vertical"
                 android:paddingLeft="15dp"
                 android:text="444-4444"
                 android:textColor="#000"
-                android:textSize="15sp" />
+                android:textSize="15dp" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:gravity="center_vertical"
             android:paddingLeft="24dp"
             android:paddingTop="24dp"
             android:paddingRight="24dp">
@@ -148,7 +159,7 @@
                 android:text="업종"
                 android:textStyle="bold"
                 android:textColor="#000"
-                android:textSize="15sp"/>
+                android:textSize="15dp"/>
 
 
             <TextView
@@ -160,7 +171,7 @@
                 android:paddingLeft="15dp"
                 android:text="음식점"
                 android:textColor="#000"
-                android:textSize="15sp" />
+                android:textSize="15dp" />
 
         </LinearLayout>
 
@@ -225,7 +236,7 @@
             android:padding="16dp"
             android:text="확인"
             android:textColor="#FAAC58"
-            android:textSize="15sp" />
+            android:textSize="15dp" />
 
     </LinearLayout>
 </LinearLayout>
