--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,14 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/add_store"
-        android:title="신규 가맹점 등록"
+        android:id="@+id/about"
+        android:title="About"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/contact"
+        android:title="문의하기"
         app:showAsAction="never" />
 
-    <!--
-    <item
-        android:id="@+id/back_btn"
-        android:icon ="@drawable/ic_arrow_back_black_24dp"
-        app:showAsAction="always"
-        android:title="" />-->
 </menu>
